# history_generator

./: .gitignore  CMakeLists.txt  dev_notes.md  main.cpp
architecture/: history_generator_plan.drawio
config/: app_config.json
data/: data_definitions.json  data_definitions.json.bk  data_lookups.json  names_and_titles.json
qt_builds/build-history_generator-CMake-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: history_generator.cpp  history_generator_manager.cpp  history_generator_manager.h
src/data_access/: data_access_base.h  data_access_dao_base.h  data_access_dao_file.cpp  data_access_dao_file.h  data_access_dao_pg.cpp  data_access_dao_pg.h  data_access_dao_sql.h  data_access_manager.cpp  data_access_manager.h
src/defs/: history_generator_aliases.h  history_generator_defs.cpp  history_generator_defs.h  json_helper_defs.h
src/generators/: end_times_era_generator.cpp  end_times_era_generator.h  end_times_generator.cpp  end_times_generator.h  generator_base.h  historical_era_generator.cpp  historical_era_generator.h  history_generator.cpp  history_generator.h  mythological_era_generator.cpp  mythological_era_generator.h  mythology_generator.cpp  mythology_generator.h  narrator.h
src/models/: data_definitions.cpp  data_definitions.h  entity.cpp  entity.h  entity_base.cpp  entity_base.h  entity_relationship.cpp  entity_relationship.h  entity_sentient.cpp  entity_sentient.h  entity_type.cpp  entity_type.h  entity_type_event_type.h  entity_type_relationship_type.cpp  entity_type_relationship_type.h  event_type.cpp  event_type.h  event_visitor.h  generated_history.cpp  generated_history.h  relationship_type.cpp  relationship_type.h
src/modules/: entity_attributes_base.h  names.cpp  names.h  narrator.cpp  narrator.h  personality.cpp  personality.h  personality_attraction.cpp  personality_attraction.h  physical_attributes.h  physicality.cpp  physicality.h  physicality_attraction.cpp  physicality_attraction.h
src/utils/: bounds.cpp  bounds.h  dice_rolls.cpp  dice_rolls.h  (+17 more)
tmp_event_storage/: absorbed_group_event.h  altered_identity_event.cpp  altered_identity_event.h  assassinated_leader_event.cpp  attacked_entity_event.cpp  changed_leadership_event.h  demanded_sacrifice_event.h  died_event.cpp  died_event.h  emerged_event.h  established_lair_event.h  formed_alliance_event.h  initiated_conflict_event.h  initiated_revolt_event.cpp  initiated_revolt_event.h  joined_group_event.cpp  joined_group_event.h  killed_entity_event.cpp  married_event.cpp  merged_into_group_event.cpp  merged_into_group_event.h  opposed_policy_event.cpp  performed_ritual_event.h  signed_treaty_event.cpp  spread_fear_event.cpp  spread_influence_event.cpp  spread_influence_event.h  subverted_rival_event.h  was_captured_event.h  was_subdued_event.cpp
(+117 files in other folders)
